# agent-orchestrator

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  personas.yaml  pyproject.toml
docs/superpowers/plans/: 2026-04-14-agent-orchestrator-scaffold.md  2026-04-14-phase2.md
docs/superpowers/specs/: 2026-04-14-agent-orchestrator-design.md  2026-04-14-phase2-design.md
orchestrator/: checkpoint.py  config.py  graph.py  history.py  state.py  streaming.py
orchestrator/agents/: base.py  client.py  factory.py  openrouter.py
orchestrator/nodes/: advisor.py  evaluator.py  generator.py  planner.py
tests/: test_checkpoint.py  test_client.py  test_config.py  test_factory.py  test_graph.py  test_history.py  test_nodes.py  test_openrouter.py  test_state.py  test_streaming.py
